Add link to original author and site

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -129,7 +129,10 @@
 			<div>
 				<h1 style="font-size:1.8rem;font-weight:600">Go Template</h1>
 				<span style="font-size:.9rem;opacity:.9">
-					<p style="margin-top:.5rem">Quickly test and visualize your Go <a href="https://pkg.go.dev/text/template" target="_blank" style="color:#f7fa58">templates</a> live.</p>
+					<p style="margin-top:.5rem">Quickly test and visualize your Go <a href="https://pkg.go.dev/text/template" target="_blank" style="color:#fad458">templates</a> live.</p>
+					<p style="margin-top:.5rem">A quick demo using my own <a href="https://github.com/joshuagrisham-karolinska/gotmpl" target="_blank" style="color:#fad458">Go Template
+						WebAssembly</a> based on <a href="https://www.bejarano.io/" target="_blank" style="color:#fad458">Ricard Bejarano's</a>
+						<a href="https://gotemplate.io/" target="_blank" style="color:#fad458">gotemplate.io</a>.</p>
 				</span>
 			</div>
 		</section>
