--- a/wasm/index.html
+++ b/wasm/index.html
@@ -4,20 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="robots" content="index, follow">
-		<meta name="format-detection" content="telephone=no">
-		<meta name="google" content="nositelinkssearchbox">
-		<link rel="canonical" href="https://gotemplate.io/">
-
 		<title>Go Template</title>
-		<meta name="description" content="Quickly test and visualize your Go templates live. Template and data never leave your browser. Requires WebAssembly support.">
 
-		<meta property="og:title" content="Go Template">
-		<meta property="og:description" content="Quickly test and visualize your Go templates live. Template and data never leave your browser. Requires WebAssembly support.">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://karolinskahospital.com/">
-
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<style>
 			* {
@@ -142,13 +131,13 @@
 				<span style="height:1.4rem;display:flex;align-items:flex-start;padding:0 .5rem">
 					<h2 style="opacity:.75">TEMPLATE <span style="opacity:.5">in <a href="https://pkg.go.dev/text/template#hdr-Actions" target="_blank">Go</a> format</span></h2>
 					<h2 id="error-tmpl-txt" style="color:#FA5958;margin-left:auto"></h2>
-					<img id="error-tmpl-img" src="/images/error.svg" style="display:none;margin-left:.25rem;width:1rem;height:1rem">
+					<img id="error-tmpl-img" src="images/error.svg" style="display:none;margin-left:.25rem;width:1rem;height:1rem">
 				</span>
 				<div class="textarea" style="height:calc(50% - 1.9rem);margin-bottom:1rem"><textarea id="input-tmpl" style="height:100%" placeholder="Hello, {{.planet}}!" oninput="renderTemplate();">Hello, {{.planet}}!</textarea></div>
 				<span style="height:1.4rem;display:flex;align-items:flex-start;padding:0 .5rem">
 					<h2 style="opacity:.75;padding:0 .5rem">DATA <span style="opacity:.5">in <a href="https://www.json.org/json-en.html" target="_blank">JSON</a> format</span></h2>
 					<h2 id="error-data-txt" style="color:#FA5958;margin-left:auto"></h2>
-					<img id="error-data-img" src="/images/error.svg" style="display:none;margin-left:.25rem;width:1rem;height:1rem">
+					<img id="error-data-img" src="images/error.svg" style="display:none;margin-left:.25rem;width:1rem;height:1rem">
 				</span>
 				<div class="textarea" style="height:calc(50% - 1.9rem)"><textarea id="input-data" style="height:100%" placeholder='{ "planet": "World" }' oninput="renderTemplate();">{ "planet": "World" }</textarea></div>
 			</div>
@@ -156,7 +145,7 @@
 				<span style="height:1.4rem;display:flex;align-items:flex-start;padding:0 .5rem">
 					<h2 style="opacity:.75">OUTPUT</h2>
 					<h2 style="opacity:.75;margin-left:auto">powered by</h2>
-					<a href="https://webassembly.org/" target="_blank"><img src="/images/webassembly.svg" style="display:inline-block;margin-left:.25rem;width:1rem;height:1rem"></a>
+					<a href="https://webassembly.org/" target="_blank"><img src="images/webassembly.svg" style="display:inline-block;margin-left:.25rem;width:1rem;height:1rem"></a>
 				</span>
 				<div class="textarea-light" style="height:calc(100% - 1.4rem)"><textarea id="output" placeholder="Rendered template will show up here..." disabled>Hello, World!</textarea></div>
 			</div>
